# soccer

./: README.md
field_dimensions/: CMakeLists.txt  package.xml
field_dimensions/config/: README  hl_adult.json  hl_kid.json  msl.json  spl.json  ssl_a.json  ssl_b.json
field_dimensions/src/: provider_node.cpp
soccer_field_publisher/: CMakeLists.txt  package.xml
soccer_field_publisher/config/: msl_default.json  runswift.json  spl_default.json
soccer_field_publisher/src/: msl_field_publisher_node.cpp  spl_field_publisher_node.cpp
